--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.30.0",
     "styled-component": "^2.8.0",
     "styled-components": "^6.1.16",
     "swiper": "^11.2.6"
